# XNetFlax

./: README.md  pyproject.toml
src/xnetflax/: __init__.py  activation.py  mnist.py  models.py
