[project]
name = "xnetflax"
version = "0.1.0"
description = "Experiments with Cauchy activations in Flax."
authors = [
    { name = "Aksel Fristrup", email = "aksel@fristrup.dk" }
]
dependencies = [
    "jax>=0.4.35",
    "flax>=0.10.1",
    "chex>=0.1.87",
    "datasets>=3.1.0",
    "optax>=0.2.4",
    "tqdm>=4.67.0",
    "numpy>=2.1.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/xnetflax"]
